--- a/pdfFiles/templates/work.html
+++ b/pdfFiles/templates/work.html
@@ -2,34 +2,33 @@
 <html>
    <head>
       <title>Facture</title>
-      <style>        :root {            --bg-clr: #ead376;            --white: #fff;            --primary-clr: #2f2929;            --secondary-clr: #5265a7;          }                    * {            margin: 0;            padding: 0;            box-sizing: border-box;            font-family: "Ubuntu", sans-serif;          }                    body {            background: var(--primary-clr);            font-size: 12px;            line-height: 20px;            color: var(--primary-clr);            padding: 0 0px;            display: flex;            justify-content: center;            width: 400px;            margin: auto          }          section{            width: 100%;          }          .Facture {            width: 100%;            height: auto;            background: var(--white);            padding: 10px 10px;            position: relative;            margin: 20px auto;            border: 1px solid gray;          }                    .ligne1 {            width: 15%;          }                    .w_50 {            width: 50%;          }                    .ligne {            width: 55%;          }                    .title h2{              font-size: 1.5em !important;          }                    .p_title {            font-weight: 700;            font-size: 14px;          }                    .p_title span{              font-size: 14px;              font-weight: 400;          }                    .row {            display: flex;            justify-content: space-between;          }                    .text_right {            text-align: right;          }                    .Facture .header .row {            justify-content: space-between;            margin-bottom: 10px;          }                    .Facture .header .row:last-child {            align-items: flex-end;          }                    .Facture .header .row .logo p {            font-family: "Redressed", cursive;          }                    .Facture .header .row .logo p,          .Facture .header .row .title h2 {            font-size: 32px;            line-height: 38px;            color: var(--secondary-clr);          }                    .Facture .header .row .adresse .p_title span {            font-weight: 400;            font-size: 12px;          }                    .Facture .body .table .col p {            font-weight: 700;          }                    .Facture .body .table .row .col {            padding: 5px 1px;          }                    .Facture .body .table .table_head .row {            border: 2px solid;            border-color: var(--primary-clr) transparent var(--primary-clr) transparent;                     }                    .Facture .body .table .table_body .row:last-child {            border-bottom: 2px solid var(--primary-clr);          }                    .Facture .body .table .table_foot .grand_total_wrap {            margin-top: 20px;          }                    .Facture .body .table .table_foot .grand_total_wrap .grand_total {            background: var(--secondary-clr);            color: var(--white);            padding: 10px 15px;          }                              .Facture .footer {            margin-top: 30px;          }    </style>
+      <style>        :root {            --bg-clr: #ead376;            --white: #fff;            --primary-clr: #2f2929;            --secondary-clr: #5265a7;          }                    * {            margin: 0;            padding: 0;            box-sizing: border-box; }                    body {            background: var(--primary-clr);            font-size: 12px;            line-height: 20px;            color: var(--primary-clr);            padding: 0 0px;            display: flex;            justify-content: start;            width: 100%;            margin: auto          }          section{            width: 100%;          }          .Facture {            width: 100%;            height: auto;            background: var(--white);            padding: 10px 10px;            position: relative;            margin: 20px auto;            border: 1px solid gray;          }                    .ligne1 {            width: 15%;          }                    .w_50 {            width: 50%;          }                    .ligne {            width: 55%;          }                    .title h2{              font-size: 1.5em !important;          }                    .p_title {            font-weight: 700;            font-size: 14px;          }                    .p_title span{              font-size: 14px;              font-weight: 400;          }                    .row {            display: flex;            justify-content: space-between;          }                    .text_right {            text-align: right;          }                    .Facture .header .row {            justify-content: space-between;            margin-bottom: 10px;          }                    .Facture .header .row:last-child {            align-items: flex-end;          }                    .Facture .header .row .logo p { cursive;          }                    .Facture .header .row .logo p,          .Facture .header .row .title h2 {            font-size: 32px;            line-height: 38px;            color: var(--secondary-clr);          }                    .Facture .header .row .adresse .p_title span {            font-weight: 400;            font-size: 12px;          }                    .Facture .body .table .col p {            font-weight: 700;          }                    .Facture .body .table .row .col {            padding: 5px 1px;          }                    .Facture .body .table .table_head .row {            border: 2px solid;            border-color: var(--primary-clr) transparent var(--primary-clr) transparent;                     }                    .Facture .body .table .table_body .row:last-child {            border-bottom: 2px solid var(--primary-clr);          }                    .Facture .body .table .table_foot .grand_total_wrap {            margin-top: 20px;          }                    .Facture .body .table .table_foot .grand_total_wrap .grand_total {            background: var(--secondary-clr);            color: var(--white);            padding: 10px 15px;          }                              .Facture .footer {            margin-top: 30px;          }    </style>
    </head>
-   <body style="background: white">
-      <section>
+   <body style="background: white; display: flex; justify-content: j" >
+      <section class="b" style=" width: 350px">
          <div class="Facture">
             <div class="header">
                <div class="row">
-                  <div class="logo" style="display: flex">
-                     <img            class="img-responsive"                        alt="logo"            src="{{groupeLogo}}"            style="width: 71px;border: 1px solid gray; margin-right: 1em"          />          
+                  <div class="logo col-12" style="display: flex">
+                     <img            class="img-responsive"                        alt="logo"            src="{{groupeLogo}}"            style="width: 71px;border: 1px solid gray; margin-right: 1em"          />                               
                      <div class="info-school">
                         <h4 class="text-end mb-0"> {{ groupeName }}</h4>
                         <h5>
-                        {{ groupeDevise }}</p>            
+                        {{ groupeDevise }}</p>                                    
                         <h5>
-                        {{siteContact}} </p>            
+                        {{siteContact}} </p>                                    
                         <h5>{{siteName}} </h5>
                      </div>
                   </div>
-                  <div class="title">
-                     <h2>Reçu de caisse</h2>
-                     <p class="p_title text_right">          </p>
+               </div>
+               <div class="row">
+                  <div class="title" style="width: 100%">
+                     <h2 style="text-align: end">Reçu de caisse</h2>
                   </div>
                </div>
                <div class="row">
                   <div class="number">
-                     <div>
-                        <img width="100" src="data:image/png;base64,{{ qrcode }}" alt="QR Code">
-                     </div>
+                     <div>                        <img width="65" src="data:image/png;base64,{{ qrcode }}" alt="QR Code">                     </div>
                      <p class="p_title">Reçu n⁰: {{ recuNumber }} </p>
                   </div>
                   <div class="adresse text_right">
@@ -39,28 +38,40 @@
                </div>
             </div>
             <div class="body">
+               <table style="width: 100%">
+                  <tr style="border-bottom:">
+                     <th>DESCRIPTION</th>
+                     <th>MONTANT</th>
+                  </tr>
+                  {% for line in transactions %}  
+                  <tr>
+                     <td>{{ line.label }}</td>
+                     <td>{{ line.paied }}</td>
+                  </tr>
+                  {% endfor %} 
+               </table>
                <div class="table">
                   <div class="table_head">
                      <div class="row">
                         <div class="col ligne">
-                           <p class="p_title">DESCRIPTION</p>
+                           <p class="p_title"></p>
                         </div>
                         <div class="col ligne2">
-                           <p class="p_title">MONTANT</p>
+                           <p class="p_title"></p>
                         </div>
                      </div>
                   </div>
                   <div class="table_body">
-                     {% for line in transactions %}              
+                                                      
                      <div class="row">
                         <div class="col ligne">
-                           <p>{{ line.label }}</p>
+                           <p></p>
                         </div>
-                        <div class="col ligne1">
-                           <p>{{ line.paied }}</p>
+                        <div class="col ligne">
+                           <p></p>
                         </div>
                      </div>
-                     {% endfor %}         
+                                               
                   </div>
                   <div class="table_foot">
                      <div class="row">
@@ -79,7 +90,6 @@
                      </div>
                   </div>
                </div>
-
                <div>
                   <p style="font-size: 0.8em">RESUME DES FRAIS OBLIGATOIRES</p>
                   <table>
@@ -109,14 +119,22 @@
                   </div>
                   <div class="col w_50 text_right">
                      <p>
-                        Mode paiement:             
+                        Mode paiement:                                     
                         <stroing>
-                        {{ modePay }}</strong>         
+                        {{ modePay }}</strong>                              
                      </p>
                      <p class="p_title">Signature</p>
                   </div>
                </div>
             </div>
+         </div>
+
+
+
+         <div>
+            Work so hard
+
+            {{ objet_charge }} 
          </div>
       </section>
    </body>
