--- a/pdfFiles/templates/work.html
+++ b/pdfFiles/templates/work.html
@@ -1,140 +1,140 @@
 <!DOCTYPE html>
 <html>
-   <title>Caisse</title>
    <head>
-      <style>      {{bootstrap}}      body{          width: 100%;      }      .text-danger strong {              color: #9f181c;          }          .receipt-main {              background: #ffffff none repeat scroll 0 0;              border-bottom: 3px solid #333333;              border-top: 3px solid #9f181c;              margin-top: 50px;              margin-bottom: 50px;              padding: 40px 30px ;              box-shadow: 0 1px 21px #acacac;              color: #333333;              font-family: open sans;          }          .receipt-main p {              color: #333333;              font-family: open sans;              line-height: 1.42857;          }          .receipt-footer h1 {              font-size: 15px;              font-weight: 400 ;              margin: 0 ;          }          .receipt-main thead {              background: #414143 none repeat scroll 0 0;          }          .receipt-main thead th {              color:#fff;              background: gray;          }          .receipt-right h5 {              font-size: 16px;              font-weight: bold;              margin: 0 0 7px 0;          }          .receipt-right p {              font-size: 1em;              margin: 0px;          }          .receipt-right p i {              text-align: center;              width: 18px;          }          .receipt-main td {              padding: 9px 20px ;          }          .receipt-main th {              padding: 5px 20px ;          }          .receipt-main td {              font-size: 1em;              font-weight: initial ;          }          .receipt-main td p:last-child {              margin: 0;              padding: 0;          }          .receipt-main td h2 {              font-size: 20px;              font-weight: 900;              margin: 0;              text-transform: uppercase;          }          .receipt-header-mid .receipt-left h1 {              font-weight: 100;              text-align: right;              text-transform: uppercase;          }          .receipt-header-mid {              margin: 10px 0;              overflow: hidden;          }          #container {              background-color: #dcdcdc;          }          th{            padding: 2px !important;            padding-left: 10px !important;            font-size: 1em !important;          }          td{            padding: 5px !important;          }          </style>
+      <title>Facture</title>
+      <style>        :root {            --bg-clr: #ead376;            --white: #fff;            --primary-clr: #2f2929;            --secondary-clr: #5265a7;          }                    * {            margin: 0;            padding: 0;            box-sizing: border-box; }                    body {            background: var(--primary-clr);            font-size: 12px;            line-height: 20px;            color: var(--primary-clr);            padding: 0 0px;            display: flex;            justify-content: start;            width: 100%;            margin: auto          }          section{            width: 100%;          }          .Facture {            width: 100%;            height: auto;            background: var(--white);            padding: 10px 10px;            position: relative;            margin: 20px auto;            border: 1px solid gray;          }                    .ligne1 {            width: 30%;          }                    .w_50 {            width: 50%;          }                    .ligne {            width: 70%;          }                    .title h2{              font-size: 1.5em !important;          }                    .p_title {            font-weight: 700;            font-size: 14px;          }                    .p_title span{              font-size: 14px;              font-weight: 400;          }                    .row {            display: flex;            justify-content: space-between;          }                    .text_right {            text-align: right;          }                    .Facture .header .row {            justify-content: space-between;            margin-bottom: 10px;          }                    .Facture .header .row:last-child {            align-items: flex-end;          }                    .Facture .header .row .logo p { cursive;          }                    .Facture .header .row .logo p,          .Facture .header .row .title h2 {            font-size: 32px;            line-height: 38px;            color: var(--secondary-clr);          }                    .Facture .header .row .adresse .p_title span {            font-weight: 400;            font-size: 12px;          }                    .Facture .body .table .col p {            font-weight: 700;          }                    .Facture .body .table .row .col {            padding: 5px 1px;          }                    .Facture .body .table .table_head .row {            border: 2px solid;            border-color: var(--primary-clr) transparent var(--primary-clr) transparent;                     }                    .Facture .body .table .table_body .row:last-child {            border-bottom: 2px solid var(--primary-clr);          }                    .Facture .body .table .table_foot .grand_total_wrap {            margin-top: 20px;          }                    .Facture .body .table .table_foot .grand_total_wrap .grand_total {            background: var(--secondary-clr);            color: var(--white);            padding: 10px 15px;          }                              .Facture .footer {            margin-top: 30px;          }   
+      *{
+         color: black !important;
+         font-weight: bolder !important;
+      }  
+      #table-fees tr, #table-fees td{
+         border: 1px solid black;
+         padding-left: 5px;
+      } 
+      #table-fees{
+         width: 100%;
+         border-collapse: collapse;
+      }
+      .bg-th{
+         background: gray;
+         color: white !important;
+      }
+      .stay-up{
+         display: flex;
+         align-items: start;
+      }
+      </style>
    </head>
-   <body>
-      <div class="container col">
-         <div class="receipt-main m-auto mt-0">
-            <div class="row mb-0">
-               <div class="receipt-header col-12 row mt-0">
-                  <div class="col-10 d-flex">
-                     <div class="receipt-left">                <img                  class="img-responsive mr-4"                  alt="iamgurdeeposahan"                  src="{{groupeLogo}}"                  style="width: 71px; border-radius: 43px; margin-left: 1em"                />              </div>
-                     <div class="">
-                        <div class="receipt-right">
-                           <h4 class="text-end mb-0">{{ groupeName }}</h4>
-                           <p>{{groupeDevise}} <i class="fa fa-envelope-o"></i></p>
-                           <p>{{siteContact}} <i class="fa fa-phone"></i></p>
-                           <h5>{{siteName}} <i class="fa fa-location-arrow"></i></h5>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="col-2">
-                     <div>                        <img width="100" src="data:image/png;base64,{{ qrcode }}" alt="QR Code">                     </div>
-                  </div>
-               </div>
-            </div>
-            <hr class="my-0 mt-1" />
-            <div class="row">
-               <div class="receipt-header receipt-header-mid row pl-1 w-100">
-                  <div class="col-7 text-left">
-                     <div class="receipt-right">
-                        <p>Nom(s) : <b>{{eleveName}}</b></p>
-                        <p>Prénom(s) : <b>{{elevePrenom}} </b></p>
-                        <p>Matricule : <b>{{matricule}} </b></p>
-                        <p>Classe : <b>{{niveau}} </b></p>
-                        <p>Annee : <b>{{scholarYear}} </b></p>
-                     </div>
-                  </div>
-                  <div class="col-5">
-                     <div class="w-100">
-                        <h5 class="text-uppercase text-end w-100">                  Reçu N॰{{ recuNumber }}                </h5>
-                        <div class="receipt-right">
-                           <p>Agent : <b>{{printerAgent}}</b></p>
-                           <p>Caisse : <b>{{ caisse }}</b></p>
-                           <p>Date : <b>{{dateRecu }}</b></p>
-                        </div>
+   <body style="background: white; display: flex; justify-content: j" >
+      <section class="b" style=" width: 300px">
+         <div class="Facture">
+            <div class="header">
+               <div class="row">
+                  <div class="logo col-12" style="display: flex">
+                     <img            class="img-responsive"                        alt="logo"            src="{{groupeLogo}}"            style="width: 71px;border: 1px solid gray; margin-right: 1em"          />                                                                         
+                     <div class="info-school">
+                        <h4 class="text-end mb-0"> {{ groupeName }}</h4>
+                        <h5>
+                        {{ groupeDevise }}</p>                                                                                    
+                        <h5>
+                        {{siteContact}} </p>                                                                                    
+                        <h5>{{siteName}} </h5>
                      </div>
                   </div>
                </div>
+               <hr/>
+               <h2 style="text-align: center">Reçu de caisse</h2>
+               <table>
+                  <tr>
+                     <td>Année scolaire </td>
+                     <td>: {{scholarYear}}</td>
+                  </tr>
+
+                  <tr>
+                     <td>Reçu nº</td>
+                     <td>: {{ recuNumber }}</td>
+                  </tr>
+               </table>
+               <hr/>
+               <table>
+                  <tr>
+                     <td class="stay-up">Matricule(s)</td>
+                     <td>: {{matricule}}</td>
+                  </tr>
+
+                  <tr>
+                     <td class="stay-up">Nom(s)</td>
+                     <td>: {{ eleveName }}</td> 
+                  </tr>
+
+                  <tr >
+                     <td class="stay-up">Prénom(s)</td>
+                     <td>: {{ elevePrenom }}</td>
+                  </tr>
+
+                  <tr>
+                     <td class="stay-up">Classe(s)</td>
+                     <td>: {{ niveau }}</td>
+                  </tr>
+               </table>
+
+               <table id="table-fees">
+                  <tr>
+                     <td class="bg-th">Description</td>
+                     <td class="bg-th" style="width: 100px">Payé</td>
+                     <!--td>Reste à Payer</td-->
+                  </tr>
+                  {% for line in transactions %} 
+                  <tr>
+                     <td>{{ line.label }}</td>
+                     <td>{{ line.paied }}</td>
+                  </tr>
+                  {% endfor %} 
+               </table>
             </div>
-            <table class="table table-bordered">
-               <tr style="background-color: gray !important; color: white">
-                  <th style="background-color: gray !important; color: white">              Description            </th>
-                  <th style="background-color: gray !important; color: white">                Montant dû            </th>
-                  <th style="background-color: gray !important; color: white">                Payé            </th>
-                  <th style="background-color: gray !important; color: white">                Reste à Payer            </th>
-               </tr>
-               {% for line in transactions %}                                                                      
-               <tr>
-                  <td>{{ line.label }}</td>
-                  <td>{{ line.amount }}</td>
-                  <td>{{ line.paied }}</td>
-                  <td>{{ line.restPaied }}</td>
-               </tr>
-               {% endfor %}                                                                      
-               <tr>
-                  <td style="width: 55% !important" class="text-right">
-                     <h2 style="font-size: 1em">Total:</h2>
-                  </td>
-                  <td class="text-left text-danger" style="width: 100px">              <strong> {{totalAmountTransaction}}</strong>            </td>
-                  <td class="text-left text-danger" style="width: 100px">                <strong> {{totalAmountPaied}}</strong>            </td>
-                  <td class="text-left text-danger" style="width: 100px">                <strong> {{totalAmountRest}}</strong>            </td>
-               </tr>
-            </table>
-            <hr/>
-               
-            <div class="row">
-               <div class="col-8">
-                  {% if eleveFees  %}                                    
-                  <p style="font-size: 0.8em" class="mb-0">RESUME DES FRAIS OBLIGATOIRES</p>
-                  <table class="table table-bordered resums mt-0">
-                     <tr style="background-color: gray !important; color: white" >
-                        <th style="background-color: gray !important; color: white; font-size: 0.9em !important">              Description            </th>
-                        <th style="background-color: gray !important; color: white; font-size: 0.9em !important">              Reste à Payer            </th>
-                     </tr>
-                     {% for line in eleveFees %}                                                                      
+            
+            <div class="body">
+               <div>
+                  <p style="font-size: 0.8em">RESUME DES FRAIS OBLIGATOIRES</p>
+                  <table>
                      <tr>
-                        <td style="font-size: 1em !important">{{ line.transactionTypeTitle }}</td>
-                        <td style="font-size: 1em !important">{{ line.restToPay }}</td>
+                        <th style="text-align: left">Total dû</th>
+                        <td>: {{ totalstandardAmount }}</td>
                      </tr>
-                     {% endfor %}                                                                      
                      <tr>
-                        <td class="text-right">
-                           <h2 style="font-size: 0.9em">Total:</h2>
-                        </td>
-                        <td class="text-left text-danger" style="width: 100px; font-size: 1em !important">              <strong> {{totalstandardAmount}}</strong>            </td>
-                        <td class="text-left text-danger" style="width: 100px; font-size: 1em !important">                <strong> {{totaltotalAmountPaid}}</strong>            </td>
-                        <td class="text-left text-danger" style="width: 100px; font-size: 1em !important">                <strong> {{totalrestToPay}}</strong>            </td>
+                        <th style="text-align: left">Total payé</th>
+                        <td>: {{ totaltotalAmountPaid }}</td>
+                     </tr>
+                     <tr>
+                        <th style="text-align: left">Total restant</th>
+                        <td>: {{ totalrestToPay }}</td>
                      </tr>
                   </table>
-                  {% endif %}      
                </div>
-
-               <div class="col-4">
-                  <div class="row">
-                     <div            class="receipt-header receipt-header-mid receipt-footer row w-100"          >
-                        <div class="col-12">
-                           <div class="col-12 text-left">
-                              <div class="receipt-right">
-                                 <p>
-                                    Mode paiement:                                                                                                                         
-                                    <stroing>
-                                    {{ modePay }}</strong>                                                                                                            
-                                 </p>
-                              </div>
-                           </div>
-                           <div class="col-12"></div>
-                        </div>
-                        <div class="col-12 d-flex justify-content-end">
-                           <table class="table table-bordered">
-                              <tr>
-                                 <th>Bénéficiaire</th>
-                                 <th>Caissier</th>
-                              </tr>
-                              <tr style="height: 100px">
-                                 <td></td>
-                                 <td></td>
-                              </tr>
-                           </table>
-                        </div>
+            </div>
+            <hr/>
+            <div class="footer">
+               <div class="row">
+                  <div class="col">
+                     <div class="col ">
+                        <p class="">Agent: {{printerAgent}} </p>
+                        <p class="">Caisse: {{ caisse }}</p>
+                        <p class="">Date: {{dateRecu }}</p>
+                        <p><img width="65" src="data:image/png;base64,{{ qrcode }}" alt="QR Code"> </p>
                      </div>
+
+                  </div>
+                  <div class="col w_50 text_right">
+                     <p>
+                        Mode paiement:                                                                                     
+                        <stroing>
+                        {{ modePay }}</strong>                                                                        
+                     </p>
+                     <p class="p_title">Signature</p>
                   </div>
                </div>
             </div>
-
          </div>
-      </div>
+      </section>
    </body>
 </html>
